traefik_dashboard-ingressroute/resources/traefik-auth.middleware.basicauth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: traefik-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-auth-secret
